index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.App {
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.sidebar {
  grid-row: 1 / span 5;
  grid-column: 1 / span 1;
  border: 1px black;
  background: gray;
}

.reviews {
  grid-row: 1 / span 2;
  grid-column: 2 / span 1;
  border: 1px black;
  background: green;
}

.avgRating {
  grid-row: 1 / span 2;
  grid-column: 3 / span 1;
  border: 1px black;
  background: red;
}

.sentAnalysis {
  grid-row: 1 / span 2;
  grid-column: 4 / span 1;
  border: 1px black;
  background: lightskyblue;
}

.websiteVisitors {
  grid-row: 3 / span 3;
  grid-column: 2 / span 3;
  border: 1px black;
  background: yellow;
}

